# kmediaplayer

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5MediaPlayerConfig.cmake.in  LICENSE  README.md  metainfo.yaml
autotests/: CMakeLists.txt  playertest.cpp  testplayer.h  testview.h  viewtest.cpp
docs/: Doxyfile.local
src/: CMakeLists.txt  kmediaplayeradaptor.cpp  kmediaplayeradaptor_p.h  player.cpp  player.h  view.cpp  view.h
src/kmediaplayer/: CMakeLists.txt  player.h  view.cpp  view.h
